[project]
name = "github-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
github-reports = "cli:main"

[tool.setuptools.packages.find]
where = ["github_reports"]
